syntax = "proto3";
package api;

option go_package = "github.com/JuanBiancuzzo/own_wiki/core"; 

// Describes the structure of the data define by the user
message ComponentStructure {
    string name = 1;
    repeated FieldStructure fields = 2;
}

// The all possible types of a field
enum FieldType {
    INT = 0;
    STRING = 1;
    BOOL = 3;
    DATE = 4;
    REFERENCE = 5;
}

// Represents a type of data that could be represented and save by the system
message FieldStructure {
    string name = 1;
    FieldType type = 2;
    optional ComponentStructure reference = 3;
    bool is_null = 4;
    bool is_key = 5;
}

// Represents the construction of a entity, that could be a Component, or a composition of components
message EntityDescription {
    oneof description {
        ComponentDescription component = 1;
        ComponentCompositionDescription composition = 2;
    }
}

// Represents the composition of components, and it's a recursive definition
message ComponentCompositionDescription {
    repeated EntityDescription entities = 1;
}


// Represents if the data is a single point or an array of values
enum DataAmount {
    POINT = 0;
    ARRAY = 1;
}

// Represents the data of the component
message ComponentDescription {

    ComponentStructure structure = 1;
    DataAmount amount = 2;
    int32 rows = 3;
    FieldsDescription fields = 4;
}

// Represents the array of fields
message FieldsDescription {
    repeated FieldDescription fields = 5;
}

// Represents the data itself
message FieldData {
    oneof data {
        int32 number = 1;
        string text = 2;
        bool boolean = 3;
        uint32 date = 4;
    }

    // if the data is nullable, then is field has meaning
    bool is_null = 5; 
}

// When the DataAmount is Point this array always has 1 element, and when the
// DataAmount is Array, this array has at least 1 element
message FieldDataArray {
    repeated FieldData array = 1;
}

// Represents the data of a field in a query result (array of values)
message FieldDescription {

    oneof data {
        FieldDataArray data_array = 1;
        FieldsDescription reference = 2;
    }
}